--- a/MTSaglikAuthenticator.Entities/MTSaglikAuthenticator.Entities.csproj
+++ b/MTSaglikAuthenticator.Entities/MTSaglikAuthenticator.Entities.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="iTextSharp" Version="5.5.13.3" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\MTSaglikAuthenticator.Core\MTSaglikAuthenticator.Core.csproj" />
   </ItemGroup>
 
